--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yo-quiz Tribu Robusta (Español)</title>
-    <!-- Frase de autor en la esquina superior derecha -->
+    <title>Tough Tribe Yo-quiz (English)</title>
 <div style="position: absolute; top: 10px; right: 10px; font-size: 14px; z-index: 1000;">
     <p style="margin: 0;">
-        Hecho por 
+        Made by 
         <a href="https://x.com/salty_baconV2" target="_blank" style="text-decoration: none; color: #007bff;">
             @salty_baconV2
         </a>
@@ -83,7 +82,7 @@
 </head>
 <body>
     <div class="quiz-title">
-        <h1>Yo-quiz Tribu Robusta (3DS)</h1>
+        <h1>Tough Tribe Yo-quiz (3DS)</h1>
     </div>
     <div class="container">
         <div class="yo-kai-icons">
@@ -275,10 +274,10 @@
 
  </div>
 
-        <input type="text" id="answer-input" placeholder="Escribe el nombre del Yo-kai.">
+        <input type="text" id="answer-input" placeholder="Type the Yo-kai's name.">
         <div class="info">
-            <p>Tiempo: <span id="time">00:00:00</span></p>
-            <p>Puntuación: <span id="score">0</span></p>
+            <p>Time: <span id="time">00:00:00</span></p>
+            <p>Score: <span id="score">0</span></p>
         </div>
     </div>
 
